<resources>
    <string name="app_name">Let\'s Wiki</string>
    <string name="difficult">Difficult</string>
    <string name="easy">Easy</string>
    <string name="start_game">Start Game</string>
    <string name="difficulty">Select Difficulty</string>
    <string name="hard">Hard</string>
    <string name="you_scored">You Scored</string>
    <string name="results">Results</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="score_colon">Score:</string>
    <string name="rank_colon">Rank :</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="description_wiki_image_view">Image describing the wiki article.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="trophy_content_desc">Image to show trophy based on position</string>
    <string name="login_to">Login to</string>
    <string name="_10">/10</string>
</resources>
